fix-z-index追加

--- a/src/styles/components/Loading.module.scss
+++ b/src/styles/components/Loading.module.scss
@@ -16,6 +16,7 @@
   letter-spacing: 2px;
   text-transform: uppercase;
   text-shadow: 1px 2px 10px #fff;
+  z-index: 1001;
 
   &:before {
     content: "";
